Rain 1477 :  DSS Fix for the Alignment in piecart on drillthrough (#1874)
* RAIN-1477 : DSS Removed chip name

* RAIN-1477 : DSS Fix for the Alignment in piecart on drillthrough

--- a/web/dss-dashboard/src/App.css
+++ b/web/dss-dashboard/src/App.css
@@ -376,11 +376,10 @@ h6 span {
     margin-bottom: 10px;
     text-align: left;
     display: flex;
-    width: min-content;
 }
 
 .pieFilterChipWrap .chipWrap {
-    margin: 5px 10px 0px 10px ;
+    margin: -5px 10px 0px 15px;
     display: flex;
 }
 
